# SimSIMD

./: .clang-format  .clang-tidy  .cmake-format.py  .editorconfig  .git-blame-ignore-revs  .gitignore  .mailmap  .npmignore  .releaserc  .spi.yml  .swift-format  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  MANIFEST.in  Makefile  Package.swift  README.md  VERSION  bench.cxx  bench.js  binding.gyp  build.rs  go.mod  numkong.gypi  package-ci.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  python.c  rustfmt.toml  setup.py  simsimd.go  test-amxtile.c  test.c
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: .releaserc  _wheels.yml  build_wheels.yml  package.json  prerelease.yml  release-c.yml  release-javascript.yml  release-python.yml  release-rust.yml  release-swift.yml  release.yml  test-c.yml  test-go.yml  test-javascript.yml  test-python.yml  test-rust.yml  test-swift.yml  update_version.sh  wheels.yml
bench/: Bench.swift  README.md  bench-browser.html  bench.cpp  bench.hpp  bench.mjs  bench_attention.cpp  bench_cast.cpp  bench_cross_amx.cpp  bench_cross_arm.cpp  bench_cross_blas.cpp  bench_cross_loongarch.cpp  bench_cross_power.cpp  bench_cross_rvv.cpp  bench_cross_serial.cpp  bench_cross_sme.cpp  bench_cross_wasm.cpp  bench_cross_x86.cpp  bench_curved.cpp  bench_dot.cpp  bench_each.cpp  bench_geospatial.cpp  bench_maxsim.cpp  bench_mesh.cpp  bench_probability.cpp  bench_reduce.cpp  bench_set.cpp  bench_sparse.cpp  bench_spatial.cpp  bench_trigonometry.cpp
c/: dispatch.h  dispatch_bf16.c  dispatch_bf16c.c  dispatch_cast.c  dispatch_e2m3.c  dispatch_e3m2.c  dispatch_e4m3.c  dispatch_e5m2.c  dispatch_f16.c  dispatch_f16c.c  dispatch_f32.c  dispatch_f32c.c  dispatch_f64.c  dispatch_f64c.c  dispatch_i16.c  dispatch_i32.c  dispatch_i4.c  dispatch_i64.c  dispatch_i8.c  dispatch_other.c  dispatch_u1.c  dispatch_u16.c  dispatch_u32.c  dispatch_u4.c  dispatch_u64.c  dispatch_u8.c  lib.c  numkong.c
cmake/: aarch64-linux-gnu.cmake  nk_arm32_isa_probes.cmake  nk_arm_isa_probes.cmake  nk_isa_probe.cmake  nk_loongarch_isa_probes.cmake  nk_math_lib.cmake  nk_power_isa_probes.cmake  nk_riscv_isa_probes.cmake  nk_x86_isa_probes.cmake  riscv64-linux-gnu.cmake  toolchain-aarch64-gnu.cmake  toolchain-android-arm64.cmake  toolchain-android-armv7.cmake  toolchain-loongarch64-gnu.cmake  toolchain-ppc64le-gnu.cmake  toolchain-riscv64-gnu.cmake  toolchain-riscv64-llvm.cmake  toolchain-wasi.cmake  toolchain-wasm.cmake  toolchain-wasm64.cmake  toolchain-x86_64-llvm.cmake
cpp/: bench.cxx  matrix.hpp  test.c
golang/: README.md  bench_test.go  dot.go  dots.go  geospatial.go  mathkong.go  matrix.go  maxsim.go  numkong.go  packed.go  probability.go  set.go  sets.go  simsimd.c  simsimd.go  spatial.go  spatials.go  unit_test.go
include/: README.md  _dummy.c  cnumkong_module.c  module.modulemap
include/mathkong/: binary.h  curved.h  dot.h  elementwise.h  geospatial.h  mathkong.h  mesh.h  probability.h  sparse.h  spatial.h  types.h  (+1 more)
javascript/: README.md  bench.js  bench.mjs  dtypes.ts  fallback.d.ts  fallback.js  fallback.ts  fallback_testTS.ts  lib.c  node-gyp-build.d.ts  numkong-browser.ts  numkong-wasm.ts  numkong.c  numkong.ts  simsimd.d.ts  simsimd.js  simsimd.ts  test.js  test.mjs  tsconfig-base.json  tsconfig-cjs.json  tsconfig-esm.json  types.ts
probes/: arm_neon.c  arm_neon_bfdot.c  arm_neon_fhm.c  arm_neon_half.c  arm_neon_sdot.c  arm_neonfp8.c  arm_sme.c  arm_sme2.c  arm_sme2p1.c  arm_sme_bf16.c  arm_sme_bi32.c  arm_sme_f64.c  arm_sme_fa64.c  arm_sme_half.c  arm_sme_lut2.c  arm_sve.c  arm_sve2.c  arm_sve2p1.c  arm_sve_bfdot.c  arm_sve_half.c  arm_sve_sdot.c  loongarch_lasx.c  power_vsx.c  probe.js  riscv_rvv.c  riscv_rvv_bb.c  riscv_rvv_bf16.c  riscv_rvv_half.c  wasm_v128relaxed.c  x86_alder.c  x86_diamond.c  x86_genoa.c  x86_graniteamx.c  x86_haswell.c  x86_icelake.c  x86_sapphire.c  x86_sapphireamx.c  x86_sierra.c  x86_skylake.c  x86_turin.c
python/: README.md  bench.py  bench_perfplot.py  benchmark.ipynb  distance.c  distance.h  dlpack_abi.h  dlpack_interop.c  dlpack_interop.h  each.c  each.h  lib.c  matrix.c  matrix.h  maxsim.c  maxsim.h  mesh.c  mesh.h  numerics.c  numerics.h  numkong.c  numkong.h  numpy_interop.c  numpy_interop.h  python.c  run.sh  scalar.c  scalar.h  scalars.c  scalars.h  tensor.c  tensor.h  test.c  test.py  types.c  types.h
rust/: README.md  capabilities.rs  cast.rs  curved.rs  each.rs  geospatial.rs  lib.c  lib.rs  matrix.rs  maxsim.rs  mesh.rs  numerics.rs  numkong.rs  probability.rs  reduce.rs  scalar.rs  scalars.rs  set.rs  sparse.rs  spatial.rs  tensor.rs  types.rs  vector.rs
scripts/: Test.swift  bench.cpp  bench.cxx  bench.ipynb  bench.js  bench.rs  bench_cosine.rs  bench_each.py  bench_elementwise.py  bench_native.rs  bench_similarity.py  bench_similarity.rs  bench_similarity_live.py  bench_spdot.rs  bench_sqeuclidean.rs  bench_tfidf.rs  bench_vectors.py  spdot.rs  test.c  test.cpp  test.mjs  test.py  tfidf.rs
simsimd/: binary.h  simsimd.h  spatial.h  twobit.h  types.h
simsimd-rs/: Cargo.toml  build.rs
src/: Makefile  arm_neon_f16.c  arm_neon_f32.c  arm_neon_f32.s  arm_neon_i8.c  arm_sve_b1.c  arm_sve_f16.c  arm_sve_f32.c  x86_avx2_f16.c  x86_avx512_b1.c
swift/: Matrix.swift  MaxSim.swift  NumKong.swift  Numerics.swift  README.md  Scalar.swift  SimSIMD.swift  Tensor.swift  Test.swift
test/: README.md  Test.swift  playwright.config.ts  test-browser-bundle-runner.mjs  test-browser-bundle.html  test-browser-runner.mjs  test-browser.html  test-dtypes.mjs  test-wasm.mjs  test.cpp  test.cu  test.hpp  test.mjs  test.py  test_base.py  test_cast.cpp  test_cross.hpp  test_cross.py  test_cross_amx.cpp  test_cross_arm.cpp  test_cross_blas.cpp  test_cross_loongarch.cpp  test_cross_power.cpp  test_cross_rvv.cpp  test_cross_serial.cpp  test_cross_sme.cpp  test_cross_wasm.cpp  test_cross_x86.cpp  test_curved.cpp  test_curved.py  test_dlpack.py  test_dot.cpp  test_dot.py  test_each.cpp  test_each.py  test_geospatial.cpp  test_geospatial.py  test_maxsim.cpp  test_maxsim.py  test_mesh.cpp  (+16 more)
(+455 files in other folders)
